--- a/.github/workflows/win_arm64.yml
+++ b/.github/workflows/win_arm64.yml
@@ -16,211 +16,20 @@ jobs:
     runs-on: windows-11-arm
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
+      - name: Install Vulkan SDK (for vulkan runtime 'vulkan-1.dll' and SwiftShader 'vk_swiftshader.dll')
+        uses: jakoch/install-vulkan-sdk-action@v1
+        with:
+          install_runtime_only: true
+          install_swiftshader: true
 
       - name: Setup flutter
         uses: subosito/flutter-action@v2
         with:
           channel: master
-
-      - name: Install 7-Zip
-        run: choco install 7zip
-
-      - name: Install Vulkan SDK (for SwiftShader)
-        uses: jakoch/install-vulkan-sdk-action@v1
-        with:
-          vulkan_version: 1.3.296.0 # Use a recent version
-          install_runtime: true
-          install_swiftshader: true
-
-      - name: Download and Setup libmpv (ARM64)
-        shell: pwsh
-        run: |
-          # Download minnyres mpv package
-          $url = "https://github.com/minnyres/mpv-windows-arm64/releases/download/v0.40.0/mpv_0.40.0_arm64.7z"
-          $outFile = "libmpv.7z"
-          Invoke-WebRequest -Uri $url -OutFile $outFile
-          7z x $outFile "-olibmpv_extract"
-          
-          $dest = "build/windows/arm64/libmpv"
-          New-Item -ItemType Directory -Force -Path "$dest/include"
-          
-          # Copy libmpv-2.dll and vulkan-1.dll from minnyres package
-          Get-ChildItem -Path "libmpv_extract" -Include "libmpv-2.dll", "vulkan-1.dll" -Recurse | Copy-Item -Destination $dest
-          
-          # Copy include/mpv headers
-          if (Test-Path "libmpv_extract/mpv/include/mpv") {
-              Copy-Item "libmpv_extract/mpv/include/mpv" -Destination "$dest/include" -Recurse
-          } else {
-              # Fallback if structure is slightly different (e.g. no top level mpv folder)
-              Write-Warning "Standard path libmpv_extract/mpv/include/mpv not found, searching..."
-              $mpvInc = Get-ChildItem -Path "libmpv_extract" -Filter "mpv" -Directory -Recurse | Where-Object { Test-Path "$($_.FullName)/client.h" } | Select-Object -First 1
-              if ($mpvInc) {
-                  Copy-Item $mpvInc.FullName "$dest/include" -Recurse
-              } else {
-                  Write-Error "Could not find mpv include directory containing client.h"
-                  exit 1
-              }
-          }
-          
-          # Build zlib from source (Chromium mirror)
-          $zlibRepo = "https://chromium.googlesource.com/chromium/src/third_party/zlib"
-          git clone $zlibRepo zlib_src
-          
-          # We need to use MSVC environment for ARM64 build
-          # GitHub Actions windows-2022/latest has Visual Studio 2022.
-          # We can use 'ilammy/msvc-dev-cmd' action to set up the environment in a separate step, 
-          # OR just call vcvarsall.bat inside a cmd block.
-          # Since we are in pwsh, let's use a separate step for zlib build or invoke cmd.
-          # Invoking cmd is easier to keep it self-contained in this dependency setup block if possible,
-          # but switching shell is cleaner.
-          # Let's use a separate step for Zlib build to ensure environment is clean and easy to debug.
-          # But we need the output in this step or accessible.
-          # Let's do it right here using cmd /c and vcvarsall.
-          
-          $vcvars = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat"
-          if (-not (Test-Path $vcvars)) {
-              # Fallback for Community edition or different path if Enterprise not found (GitHub runner usually has Enterprise)
-              $vcvars = "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat"
-          }
-          
-          $buildDir = "zlib_build"
-          $installDir = "zlib_install"
-          New-Item -ItemType Directory -Force -Path $buildDir
-          New-Item -ItemType Directory -Force -Path $installDir
-          
-          $cmdContent = @"
-          call "$vcvars" amd64_arm64
-          cd $buildDir
-          cmake -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX="../$installDir" -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_SYSTEM_PROCESSOR=aarch64 "../zlib_src"
-          cmake --build . --config Release
-          cmake --install .
-          "@
-          Set-Content -Path "build_zlib.bat" -Value $cmdContent
-          cmd /c "build_zlib.bat"
-          
-          $zlibDll = Get-ChildItem -Path "$installDir" -Filter "zlib.dll" -Recurse | Select-Object -First 1
-          if ($zlibDll) { 
-              Copy-Item $zlibDll.FullName $dest 
-              Write-Host "Built and copied zlib.dll"
-          } else {
-              Write-Error "Failed to build zlib.dll"
-              exit 1
-          }
-          
-          Write-Host "libmpv setup complete at $dest"
-
-      - name: Download and Setup ANGLE (ARM64)
-        shell: pwsh
-        run: |
-          $repo = "mmozeiko/build-angle"
-          $latestRelease = Invoke-RestMethod -Uri "https://api.github.com/repos/$repo/releases/latest"
-          $asset = $latestRelease.assets | Where-Object { $_.name -match "angle-arm64-.*\.zip" } | Select-Object -First 1
-          
-          if (-not $asset) {
-            Write-Error "Could not find compatible ANGLE asset in latest release."
-            exit 1
-          }
-          
-          $downloadUrl = $asset.browser_download_url
-          $outFile = "angle.zip"
-          Write-Host "Downloading ANGLE from $downloadUrl"
-          Invoke-WebRequest -Uri $downloadUrl -OutFile $outFile
-          
-          $extractDir = "angle_extract"
-          New-Item -ItemType Directory -Force -Path $extractDir
-          Expand-Archive -Path $outFile -DestinationPath $extractDir -Force
-          
-          # Configure for build
-          $dest = "build/windows/arm64/ANGLE"
-          New-Item -ItemType Directory -Force -Path $dest
-          
-          # Find lib directory (containing .lib files)
-          $libDir = Get-ChildItem -Path $extractDir -Filter "lib" -Directory -Recurse | Where-Object { (Get-ChildItem $_.FullName -Filter "*.lib").Count -gt 0 } | Select-Object -First 1
-          if ($libDir) {
-             New-Item -ItemType Directory -Force -Path "$dest/lib"
-             Copy-Item "$($libDir.FullName)/*" "$dest/lib" -Recurse
-          } else {
-             Write-Error "ANGLE lib directory not found"; exit 1
-          }
-          
-          # Find bin directory or root containing DLLs
-          # We look for libEGL.dll
-          $dllFile = Get-ChildItem -Path $extractDir -Filter "libEGL.dll" -Recurse | Select-Object -First 1
-          if ($dllFile) {
-             # Copy all DLLs from that directory to dest root
-             $dllDir = $dllFile.DirectoryName
-             Copy-Item "$dllDir/*.dll" "$dest"
-             
-             # Specifically look for d3dcompiler_47.dll in the archive if not already copied
-             if (-not (Test-Path "$dest/d3dcompiler_47.dll")) {
-                 $d3d = Get-ChildItem -Path $extractDir -Filter "d3dcompiler_47.dll" -Recurse | Select-Object -First 1
-                 if ($d3d) { Copy-Item $d3d.FullName "$dest" }
-             }
-
-             # Try to find system DLLs to avoid dummy files
-             # vulkan-1.dll (Already copied to libmpv dir, but ANGLE might need it too? 
-             # Actually media_kit copies from libmpv dir usually, but let's ensure it's in ANGLE dir if needed or just rely on libmpv dir)
-             # The user said vulkan-1.dll is in minnyres package. We copied it to libmpv dir above.
-             # Let's copy it to ANGLE dir too just in case.
-             $vulkanSrc = "$dest/../libmpv/vulkan-1.dll"
-             if (Test-Path $vulkanSrc) {
-                 Copy-Item $vulkanSrc "$dest"
-             }
-             
-             # vk_swiftshader.dll (From Vulkan SDK)
-             # The action installs SDK to C:\VulkanSDK\...\
-             # We need to find it.
-             $swiftshader = Get-ChildItem -Path "C:\VulkanSDK" -Filter "vk_swiftshader.dll" -Recurse | Select-Object -First 1
-             if ($swiftshader) {
-                 Copy-Item $swiftshader.FullName "$dest"
-                 Write-Host "Copied vk_swiftshader.dll from SDK"
-             } else {
-                 # Fallback search
-                 $searchPaths = @(
-                     "C:\Windows\System32\vk_swiftshader.dll",
-                     "C:\Program Files (x86)\Microsoft\EdgeWebView\Application\*\vk_swiftshader.dll"
-                 )
-                 foreach ($path in $searchPaths) {
-                     $found = Get-ChildItem -Path $path -ErrorAction SilentlyContinue | Select-Object -First 1
-                     if ($found) {
-                         Copy-Item $found.FullName "$dest"
-                         Write-Host "Copied vk_swiftshader.dll from $($found.FullName)"
-                         break
-                     }
-                 }
-             }
-
-             # zlib.dll (From txwizard download, copied to libmpv dir above)
-             $zlibSrc = "$dest/../libmpv/zlib.dll"
-             if (Test-Path $zlibSrc) {
-                 Copy-Item $zlibSrc "$dest"
-             }
-
-             # Check for and create dummy files ONLY if still missing
-             $optionalDlls = @("d3dcompiler_47.dll", "vk_swiftshader.dll", "vulkan-1.dll", "zlib.dll")
-             foreach ($dll in $optionalDlls) {
-                 if (-not (Test-Path "$dest/$dll")) {
-                     Write-Warning "$dll not found. Creating dummy file to satisfy build."
-                     New-Item -ItemType File -Path "$dest/$dll" -Force
-                 }
-             }
-          } else {
-             Write-Error "libEGL.dll not found"; exit 1
-          }
-          
-          # Find include directory
-          $includeDir = Get-ChildItem -Path $extractDir -Filter "include" -Directory -Recurse | Where-Object { Test-Path "$($_.FullName)/EGL" } | Select-Object -First 1
-          if ($includeDir) {
-             New-Item -ItemType Directory -Force -Path "$dest/include"
-             Copy-Item "$($includeDir.FullName)/*" "$dest/include" -Recurse
-          } else {
-             Write-Error "ANGLE include directory not found"; exit 1
-          }
-          
-          Write-Host "ANGLE setup complete at $dest"
 
       - name: Add fastforge and Inno Setup
         run: |
@@ -238,25 +47,14 @@ jobs:
 
       - name: Build Windows ARM64
         run: |
-          flutter build windows
-          # Assuming fastforge supports arm64 or we just package manually if fastforge is x64 specific
-          # Using manual packaging logic similar to x64 but adapted if needed
-          # fastforge package --platform windows --targets exe --flutter-build-args="dart-define-from-file=pili_release.json" 
-          # Note: fastforge might re-trigger build. If so, we need to ensure it uses --arch=arm64.
-          # If fastforge doesn't support passing arch easily or re-builds, we might need to skip it or configure it.
-          # For now, let's try to use fastforge if it allows passing args, otherwise fallback to manual zip.
-          # The user asked for "Build for Windows arm64", let's assume standard flutter build + manual zip is safer if fastforge is uncertain.
-          # But existing workflow uses fastforge. Let's try to use it but pass the arch.
-          # fastforge package command runs build? Yes.
-          # Let's just use flutter build directly and zip, as fastforge might not be fully arm64 aware or might overwrite our manual libmpv setup if it cleans?
-          # Actually, flutter build windows --arch=arm64 is safe.
-          # We will skip fastforge for now to ensure our manual steps are preserved and just zip the runner output.
+          fastforge package --platform windows --targets exe --flutter-build-args="dart-define-from-file=pili_release.json"
 
       - name: Prepare Upload
         run: |
           mkdir -p Release/PiliPlus-Win-Arm64
+          mkdir -p PiliPlus-Win-Arm64-Setup
           mv build/windows/arm64/runner/Release/* Release/PiliPlus-Win-Arm64/
-          # No Inno Setup for ARM64 yet unless we configure it, just providing zip for now.
+          mv dist/**/*.exe PiliPlus-Win-Arm64-Setup/PiliPlus_windows_${{env.version}}_arm64_setup.exe
 
       - name: Compress
         if: ${{ github.event.inputs.tag != '' }}
@@ -272,9 +70,16 @@ jobs:
           name: ${{ github.event.inputs.tag }}
           files: |
             PiliPlus_windows_*_arm64.zip
+            PiliPlus-Win-Arm64-Setup/PiliPlus_windows_*_arm64_setup.exe
 
       - name: Upload windows file release
         uses: actions/upload-artifact@v4
         with:
           name: Windows-file-arm64-release
           path: Release
+
+      - name: Upload windows setup release
+        uses: actions/upload-artifact@v4
+        with:
+          name: Windows-setup-arm64-release
+          path: PiliPlus-Win-Arm64-Setup
